add database restart action
